add emoticone and design

--- a/chat.html
+++ b/chat.html
@@ -21,6 +21,7 @@
         <section class="chat">
             <div class="square-chat">
                 <div class="private-message">
+                    <p>Private message</p>
                     <div class="list-user-div column">
                     </div>
                 </div>
@@ -40,7 +41,12 @@
                             <button type="button" class="button-emoji"><img src="/ressources/emojis/cool.png" class="emoji-icon icon"></button>
                             
                             <div class="emoji-list" style="display: none;">
-                                😀 😃 😄 😁 😆 😅 😂 🤣 😊 😇 🙂 🙃 😉 😌 😍 😘 😗 😙 😚 😋 😛 😝 😜 🤪 🤨 🧐 🤓 😎
+                                <span>😀</span> <span>😃</span> <span>😄</span> <span>😁</span> <span>😆</span> 
+                                <span>😅</span> <span>😂</span> <span>🤣</span> <span>😊</span> <span>😇</span> 
+                                <span>🙂</span> <span>🙃</span> <span>😉</span> <span>😌</span> <span>😍</span> 
+                                <span>😘</span> <span>😗</span> <span>😙</span> <span>😚</span> <span>😋</span> 
+                                <span>😛</span> <span>😝</span> <span>😜</span> <span>🤪</span> <span>🤨</span> 
+                                <span>🧐</span> <span>🤓</span> <span>😎</span>
                             </div>
                         </form>
                     </div>
