--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         <!-- Square Password. -->
 
         <div class="square-password">
+            <div class="circle">
+                <div class="img">
+                    <img id="avatar-image" src="img/cool.png" alt="Smiley">
+                </div>
+
+            </div>
             <div class="title-name center column">
                 <h4>Choose a password</h4>
             </div>
@@ -73,20 +79,20 @@
                 </form>
             </div>
         </div>
-		
+
 		<div class="square-avatar hidden">
             <div class="title-avatar center column">
                 <h4>Select your Avatar</h4>
             </div>
 
             <div class="list-avatar-square">
-                
+
             </div>
 
             <button class="submit-button cursor" onclick="avatarSubmit()">Submit</button>
         </div>
 		
     </section>
-	
+
 	<script src="/socket.io/socket.io.js"></script>
 </body>
