--- a/login.html
+++ b/login.html
@@ -17,7 +17,15 @@
 </head>
 
 <body>
+
   <div class="wrapper">
+
+    <div class="circle">
+      <div class="img">
+        <img id="avatar-image" src="img/cool.png" alt="Smiley">
+      </div>
+    </div>
+
     <div class="form-box login">
       
       <h2>Login</h2>
@@ -39,14 +47,10 @@
           <input class="input-password ip" type="password" required>
           <label class="password">Password</label>
         </div>
-        <div class="remember-me">
-          <label><input type="checkbox">Remember Me</label>
-          <a href="#">Forgot Password?</a>
-        </div>
         <button type="button" class="btn" onclick="credentialSubmit()">Login</button>
         <div class="login-register">
           <span>Don't have an account?</span>
-          <a href="#" class="register-link">Register</a>
+          <a href="index.html" class="register-link">Register</a>
         </div>
       </form>
     </div>
