--- a/chat.html
+++ b/chat.html
@@ -21,10 +21,18 @@
         <section class="chat">
             <div class="square-chat">
                 <div class="private-message">
-                    <p>Private message</p>
-                    <div class="list-user-div column">
+                    <p>Private messages</p>
+                    <div class="wrapper">
+                        <div class="list-user-div column">
+                        </div>
+    
+                        <div class="return-public-chat">
+                            <button type="button" onclick="displayPublicChat()"class="button-public">Chat public</button>
+                        </div>
                     </div>
+
                 </div>
+
                 <div class="chat-general">
                     <div class="list-message">
                         <!-- Message from all the users will be there. -->
